force-app/main/default/objects/CampaignMember/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <description>Calculation of baseline usage</description>
    <label>Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>