force-app/main/default/objects/CampaignMember/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>the email of a campaign member for tariff trial</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>