force-app/main/default/objects/CampaignMember/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>first name of campaign member for tariff trial</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>