force-app/main/default/objects/CampaignMember/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>last name of a campaign member for tariff trial</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>