force-app/main/default/objects/CampaignMember/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <description>the mobile phone of a campaign member for tariff trial</description>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>