force-app/main/default/objects/CampaignMember/fields/NMI__c.field-meta.xml
<CustomField>
    <fullName>NMI__c</fullName>
    <label>NMI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>