force-app/main/default/objects/CampaignMember/fields/Notification_Preference__c.field-meta.xml
<CustomField>
    <fullName>Notification_Preference__c</fullName>
    <label>Current Notification Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS + Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>