force-app/main/default/objects/CampaignMember/fields/Performance__c.field-meta.xml
<CustomField>
    <fullName>Performance__c</fullName>
    <description>Calculation of Performance</description>
    <label>Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>