force-app/main/default/objects/CampaignMember/fields/Retailer_Id__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Retailer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>