force-app/main/default/objects/CampaignMember/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <formula>(Performance__c -  Baseline__c) * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reward</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>