force-app/main/default/objects/CampaignMember/fields/Service_Point__c.field-meta.xml
<CustomField>
    <fullName>Service_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Point</label>
    <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>