force-app/main/default/objects/CampaignMember/fields/uom_Incident_Status__c.field-meta.xml
<CustomField>
    <fullName>uom_Incident_Status__c</fullName>
    <label>Incident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Restored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>