force-app/main/default/objects/CampaignMember/fields/uom_Market_Identifier__c.field-meta.xml
<CustomField>
    <fullName>uom_Market_Identifier__c</fullName>
    <label>Market Identifier</label>
    <length>15</length>
    <type>Text</type>
</CustomField>