force-app/main/default/objects/CampaignMember/fields/uom_Send_to_Marketing_Cloud__c.field-meta.xml
<CustomField>
    <fullName>uom_Send_to_Marketing_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>