force-app/main/default/objects/CampaignMember/recordTypes/Segment_Message.recordType-meta.xml
<RecordType>
    <fullName>Segment_Message</fullName>
    <active>true</active>
    <label>Segment Message</label>
</RecordType>